:ambulance: fix(*): fix popover item menu text alignment

--- a/client/app/css/less/bootstrap/_popover.less
+++ b/client/app/css/less/bootstrap/_popover.less
@@ -4,11 +4,11 @@
     z-index: 1040;
 
     .popover-menu {
-        & > button {
+        button {
             display: block;
             text-align: left;
         }
-        & > a {
+        a {
             display: inline-block;
         }
     }
